[package]
name = "docker-api"
version = "0.14.0"
authors = ["Wojciech Kępka <wojciech@wkepka.dev"]
description = "Interface to Docker API"
documentation = "https://docs.rs/docker-api"
homepage = "https://github.com/vv9k/docker-api-rs"
repository = "https://github.com/vv9k/docker-api-rs"
keywords = ["docker"]
license = "MIT"
edition = "2021"
readme = "README.md"

[dependencies]
containers-api = { git="https://github.com/deep-gaurav/containers-api.git", branch="reqwest"}
# containers-api = { path = "../containers-api" }
#containers-api = { git = "https://github.com/vv9k/containers-api" }

#docker-api-stubs = "0.5"
docker-api-stubs = { path = "./docker-api-stubs/lib" }

log = "0.4"
paste = "1"
thiserror = "1"

base64 = "0.13"

byteorder = "1.4"
bytes = "1.0"

chrono = { version="0.4", optional=true, features=["serde"] }

tar = "0.4"

serde = { version="1.0", features=["derive"] }
serde_json = "1.0"

url = "2.1"
futures-util = "0.3"
asynchronous-codec = "0.7.0"

http = "1.1.0"
hyper = { version="1", features=["client", "http1"] }
hyper-openssl = { version="0.10.2", optional=true }
openssl = { version="0.10", optional=true }
reqwest = { git = "https://github.com/flash-freezing-lava/reqwest.git", branch = "unix-domain-sockets", features = ["json", "stream"] }

[dev-dependencies]
env_logger = "0.11.4"
# Required for examples to run
futures = "0.3.1"
tokio = { version="1", features=["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
pretty_assertions = "1"

futures-util = "0.3"
tempfile = "3"
gethostname = "0.2"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.25"

[features]
default = ["containers-api/chrono", "chrono"]
tls = ["containers-api/tls"]
vendored-ssl = ["tls", "containers-api/vendored-ssl"]
par-compress = ["containers-api/par-compress"]
swarm = []


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
